# skr_web_python_api

./: LICENSE  README.md  requirements.txt  setup.cfg
examples/: Batch_Example.ipynb  generic_batch.py  generic_batch_file.py  mm_interactive.py  mti_interactive.py  sr_interactive.py  sr_interactive_file.py
src/skr_web_api/: __init__.py  casauth.py
