[metadata]
name = skr_web_api
version = 0.1
description = SKR_Web_API implementation
author = Willie Rogers
author_email = wjrogers@mail.nih.gov
url = https://lhncbc.nlm.nih.gov/ii/tools/Web_API_Access.html
classifiers =
    Programming Language :: Python :: 3
    License :: Public Domain
    Operating System :: OS Independent

[options]
package_dir =
     = src    
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
